@@ -1148,7 +1148,11 @@ defconfig -- This is a configuration file similar to the Linux
 		  but copy themselves entirely into RAM for better performance.
 		CONFIG_BOOT_RAMFUNCS - Other configurations may copy just some functions
 		  into RAM, either for better performance or for errata workarounds.
-		CONFIG_STACK_POINTER - The initial stack pointer
+		CONFIG_STACK_POINTER - The initial stack pointer (may not be supported
+		  in all architectures).
+		CONFIG_STACK_ALIGNMENT - Set if the your application has specific
+		  stack alignment requirements (may not be supported
+		  in all architectures).
 		CONFIG_IDLETHREAD_STACKSIZE - The size of the initial stack.
 		  This is the thread that (1) performs the inital boot of the system up
 		  to the point where user_start() is spawned, and (2) there after is the
